# Moodle-Mate

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE.md  Makefile  README.md  TODO.md  build.sh  cleaner.sh  config_example.ini  cui_beta.py  docker-compose.yml  example.env  example_config.ini  format.bat  format.sh  main.py  package-lock.json  package.json  pyproject.toml  release-please-config.json  requirements-dev.txt  requirements.txt  ruff.toml  setup.py  test.py  web_launcher.py
.cursor/commands/: add-documentation.md  address-github-pr-comments.md  clarify-task.md  create-pr.md  debug-issue.md  docker-logs.md  fix-compile-errors.md  fix-git-issues.md  generate-pr-description.md  git-commit.md  git-push.md  lint-suite.md  pre-push.md  roadmap.md  run-all-tests-and-fix.md  write-unit-tests.md
.cursor/rules/: cursor_rules.mdc  general_rules.mdc  notification_providers.mdc  run.mdc  self_improve.mdc  ui-ux-design-guidelines.mdc
.github/release-please/: config.json
.github/workflows/: ci.yml  codeql.yml  greetings.yml  mypi  release-please.yml  tests.yml
ai/: chat.py
assets/: convert.js  logo.ai
docker/: entrypoint.sh
docs/: CONFIG.md  CUSTOM_PROVIDERS.md  ENV.md  README.md
docs/explanation/: architecture.md  security.md
docs/how-to/: add-custom-provider.md  configure-web-ui.md  setup-dev-environment.md
docs/reference/: cli.md  configuration.md
docs/tutorials/: first-notification.md
example/: api_example.py  config_creator.py  example_config.ini  example_config.md  fakeopen_example.py  fakeopen_stream_example.py  openai_chat_example.py
examples/: example_config.ini
filters/: converter.py  discord_markdown.py  message_filter.py  message_filter_test.py
gpt/: README.md  deepinfra.py  fakeopen_chat.py  fakeopen_chat_stream.py  fakeopen_stream_test.py  fakeopen_test.py  groq_chat.py  openai_chat.py  openai_chat_test.py
gpt/example/: fakeopen_stream_example.py  openai_chat_example.py
moodle/: README.md  api.py  load_config.py  moodle_notification_handler.py
moodle/example/: api_example.py
notification/: TODO.md  discord.py  ghotify.py  notification_sender.py  notification_summarizer.py  ntfy.py  pushbullet.py  slack.py
old version/: main.py  mainCUI.py
old version/ai/: chat.py
old version/notification/: discord.py  ntfy.py  pushbullet.py
scripts/: clean.sh  export_requirements_dev.sh  release.md
src/: app.py  config.py
src/core/: container.py  plugin_manager.py  service_locator.py  services.py  state_manager.py  version.py
src/filters/: README.md  __init__.py  converter.py
src/gpt/: __init__.py  (+1 more)
test/: __init__.py  test_discord.py  test_message_filter.old  test_message_filter.py
tests/: README.md  conftest.py
utils/: config_creator.py  handle_exceptions.py  logo.py  main_loop.py  screen.py  setup_logging.py  wirte.py
(+183 files in other folders)
