[project]
name = "moodle-mate"
version = "2.2.0"
description = "An Python application that fetches notifications from a Moodle instance (eg. a school or university) and delivers them to a notification platform like Discord. "
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "configparser>=7.2.0",
    "fastapi>=0.115.14",
    "jinja2>=3.1.6",
    "mypy>=1.16.1",
    "openai>=1.92.2",
    "passlib>=1.7.4",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "ruff>=0.12.1",
    "slowapi>=0.1.9",
    "tiktoken>=0.9.0",
    "types-requests>=2.32.4.20250611",
    "uvicorn>=0.35.0",
]
