[project]
name = "moodle-mate"
version = "2.2.3"
description = "A Python application that fetches notifications from a Moodle instance (eg. a school or university) and delivers them to a notification platform like Discord. "
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.92.2",
    "requests>=2.32.4",
    "tiktoken>=0.9.0",
    "bleach==6.3.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.0.0",
    "urllib3>=2.6.3",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.22",
    "cryptography>=45.0.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.2.0",
    "filelock>=3.20.3",
    "pytest>=8.4.1",
    "pytest-cov>=4.0.0",
    "ruff>=0.12.1",
    "types-requests>=2.32.4.20250611",
    "virtualenv>=20.36.1",
]

[project.scripts]
moodlemate = "moodlemate.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/moodlemate"]

[tool.hatch.build.targets.wheel.force-include]
"src/moodlemate/web/static" = "moodlemate/web/static"
"src/moodlemate/web/templates" = "moodlemate/web/templates"

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["moodlemate"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["-ra", "--strict-markers", "--strict-config"]
